--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
 
       </section>
       <footer>
+        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
