--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
         <span id="logo"></span>
 
         <!-- <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a> -->
-        <a href="visitas.html" class="button"><strong>Visitas</strong></a>
+        <a href="index.html" class="button"><strong>Inicio</strong></a>
+        <a href="visitas.html" class="button"><strong>Visitas</strong></a>        
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
