--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
         <!-- <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a> -->
         <a href="index.html" class="button"><strong>Inicio</strong></a>
         <a href="visitas.html" class="button"><strong>Visitas</strong></a>        
+        <a href="contacto.html" class="button"><strong>Contacto</strong></a>        
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
@@ -47,9 +48,9 @@
 
       </section>
       <footer>
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="{{ site.github.repository_url }}" class="button fork"><strong>Ver en GitHub</strong></a>
         {% if site.github.is_project_page %}
-          <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+          <p>Proyecto <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
