--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
         <!-- <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a> -->
         <a href="index.html" class="button"><strong>Inicio</strong></a>
         <a href="visitas.html" class="button"><strong>Visitas</strong></a>        
+        <a href="enlaces.html" class="button"><strong>Enlaces</strong></a>        
         <a href="contacto.html" class="button"><strong>Contacto</strong></a>        
         {% if site.show_downloads %}
           <div class="downloads">
