--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
         <a href="index.html" class="button"><strong>Inicio</strong></a>
         <a href="visitas.html" class="button"><strong>Visitas</strong></a>        
         <a href="enlaces.html" class="button"><strong>Enlaces</strong></a>        
+        <a href="participantes.html" class="button"><strong>Participantes</strong></a>        
         <a href="contacto.html" class="button"><strong>Contacto</strong></a>        
         {% if site.show_downloads %}
           <div class="downloads">
