Página con objetivos del proyecto.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 
         <!-- <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a> -->
         <a href="index.html" class="button"><strong>Inicio</strong></a>
+        <a href="objetivos.html" class="button"><strong>Objetivos</strong></a>
         <a href="visitas.html" class="button"><strong>Visitas</strong></a>                
         <a href="participantes.html" class="button"><strong>Participantes</strong></a>        
         <a href="enlaces.html" class="button"><strong>Enlaces</strong></a>        
