--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -180,6 +180,16 @@ header {
     font-size: 18px;
     margin: 0px;
   }
+
+  #logounp {
+    position:absolute;
+    height: 36px;
+    width: 36px;
+    right:36px;
+    top:36px;
+    display: block;
+    background: url(../images/escudo-unpsjb-mini.png);
+  }
 }
 
 #banner {
