--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <span id="logounp"></span>
       </header>
 
       <div id="banner">
