Corrije URL de logo.

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -188,7 +188,7 @@ header {
     right:36px;
     top:36px;
     display: block;
-    background: url(../images/escudo-unpsjb-mini.png);
+    background: url(https://raw.githubusercontent.com/proyecto-futbol-unpsjb/website/master/img/escudo-unpsjb-mini.png);
   }
 }
 
