Cambia propiedades CSS.

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -185,8 +185,8 @@ header {
     position:absolute;
     height: 36px;
     width: 36px;
-    right:36px;
-    top:36px;
+    /*right: 36px;
+    top: 36px;*/
     display: block;
     background: url(https://raw.githubusercontent.com/proyecto-futbol-unpsjb/website/master/img/escudo-unpsjb-mini.png);
   }
