Cambia fondo por imagen.

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -191,6 +191,14 @@ header {
     display: block;
     background: url(https://raw.githubusercontent.com/proyecto-futbol-unpsjb/website/master/img/logo-unp.png);
   }
+
+  #logounp2 {
+    position:absolute;
+    height: 205px;
+    width: 166px;
+    right: 56px;
+    top: 16px;        
+  }
 }
 
 #banner {
