--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
       <header>
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <span id="logounp"></span>
+        <!-- <span id="logounp"></span> -->
+        <img id="logounp2" src="https://raw.githubusercontent.com/proyecto-futbol-unpsjb/website/master/img/logo-unp.png" height="150" width="150">
       </header>
 
       <div id="banner">
