--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
         <a href="objetivos.html" class="button"><strong>Objetivos</strong></a>
         <a href="visitas.html" class="button"><strong>Visitas</strong></a>                
         <a href="participantes.html" class="button"><strong>Participantes</strong></a>        
+        <a href="recursos.html" class="button"><strong>Recursos</strong></a>        
         <a href="enlaces.html" class="button"><strong>Enlaces</strong></a>        
         <a href="contacto.html" class="button"><strong>Contacto</strong></a>        
         {% if site.show_downloads %}
